--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-test-renderer": "^16.9.3",
     "antd": "^4.7.3",
     "lodash": "^4.17.20",
+    "puppeteer": "^5.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
