--- a/package.json
+++ b/package.json
@@ -3,30 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/lodash": "^4.14.164",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/react-test-renderer": "^16.9.3",
-    "antd": "^4.7.3",
-    "lodash": "^4.17.20",
-    "puppeteer": "^5.4.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "react-test-renderer": "^17.0.1",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "@babel/core": "7.22.9",
+    "@babel/plugin-syntax-flow": "7.14.5",
+    "@babel/plugin-transform-react-jsx": "7.14.9",
+    "@testing-library/dom": "7.21.4",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "11.2.7",
+    "@testing-library/user-event": "12.8.3",
+    "@types/jest": "26.0.24",
+    "@types/lodash": "4.14.195",
+    "@types/node": "12.20.55",
+    "@types/react": "16.14.60",
+    "@types/react-dom": "16.9.24",
+    "@types/react-redux": "7.1.20",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/react-test-renderer": "16.9.12",
+    "antd": "4.24.16",
+    "lodash": "^4.17.21",
+    "puppeteer": "^22.13.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.9",
+    "react-router-dom": "5.3.4",
+    "react-scripts": "5.0.0",
+    "react-test-renderer": "17.0.2",
+    "redux": "4.2.1",
+    "redux-saga": "1.2.2",
+    "typescript": "4.7.4",
+    "web-vitals": "^0.2.4",
+    "workbox-core": "^7.1.0",
+    "yield": "^0.0.6-8"
   },
   "scripts": {
     "start": "react-scripts start",
